<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="@dimen/_6sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llHomeLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_vector_landscape" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_lock_screen"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_bold"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPortraitDimension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/full_hd_s"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_medium"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_vector_portrait" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_screen"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_bold"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLandscapeDimension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/full_hd"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp"
                        android:visibility="visible"
                        android:fontFamily="@font/poppins_medium"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_screen_lock_portrait" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lock_screen"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_bold"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLockDimension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/full_hd"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp"
                        android:visibility="visible"
                        android:fontFamily="@font/poppins_medium"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</layout>