<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="preference"
            type="com.techiq.wallpaperwonders.utils.PrefUtils" />

        <variable
            name="viewModel"
            type="com.techiq.wallpaperwonders.design.register.RegisterViewModel" />

        <variable
            name="constant"
            type="com.techiq.wallpaperwonders.utils.Constant" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".design.login.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".design.login.LoginActivity">

            <LinearLayout
                android:id="@+id/clParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_80sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:contentDescription="@string/login"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintBottom_toTopOf="@+id/username" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_50sdp"

                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/ic_white_background_edit_text"
                    android:hint="Name"
                    android:paddingLeft="@dimen/_20sdp"
                    android:selectAllOnFocus="true"
                    android:text="@={viewModel.namelXml}"

                    />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/ic_white_background_edit_text"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_20sdp"
                    android:selectAllOnFocus="true"
                    android:text="@={viewModel.emailXml}"

                    />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"

                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/ic_white_background_edit_text"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_20sdp"
                    android:selectAllOnFocus="true"
                    android:text="@={viewModel.passwordXml}" />


                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.registerUser()}"
                    android:text="@string/register" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>